--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,6 @@
 
 html,
 body {
-	@apply text-base;
-	@apply text-gray-700;
-	@apply bg-gray-50;
+	@apply text-base text-gray-700 bg-gray-50;
+	@apply dark:text-gray-50 dark:bg-gray-900;
 }
