--- a/src/global.css
+++ b/src/global.css
@@ -5,5 +5,25 @@
 html,
 body {
 	@apply text-base text-gray-700 bg-gray-50;
-	@apply dark:text-gray-50 dark:bg-gray-900;
+	@apply dark:text-gray-200 dark:bg-gray-900;
+}
+
+html::-webkit-scrollbar {
+	width: 0.6vw;
+}
+
+html::-webkit-scrollbar-track {
+	@apply bg-gray-200 dark:bg-gray-800 bg-opacity-50;
+}
+
+html::-webkit-scrollbar-track:hover {
+	@apply bg-opacity-100;
+}
+
+html::-webkit-scrollbar-thumb {
+	@apply bg-gray-400 dark:bg-gray-600 bg-opacity-50;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+	@apply bg-opacity-100;
 }
